# privaxy

./: Cargo.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
privaxy/: Cargo.toml
privaxy/src/server/: main.rs
src-tauri/: Cargo.toml
web_frontend/: Cargo.toml  Trunk.toml  pnpm-lock.yaml
