[workspace]
workspace.resolver = "2"
members = ["web_frontend", "privaxy", "src-tauri"]

[workspace.package]
authors = [ "AR10" ]
homepage = ""
repository = "https://github.com/AR10Dev/privaxy"
categories = [ "adblock" ]
license = "GNU AFFERO GENERAL PUBLIC"
edition = "2021"
rust-version = "1.65"

[profile.release]
panic = "abort"
codegen-units = 1
incremental = false
opt-level = "s"
lto = true
