[package]
name = "privaxy"
version = "0.3.1"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "privaxy"
path = "src/server/main.rs"

[lib]
name = "privaxy"
path = "src/server/lib.rs"

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.99"
toml = "0.5.9"
serde = { version = "1.0.164", features = ["derive"] }
tokio-util = { version = "0.7.8", features = ["full"] }
adblock = { version = "0.7.10" }
openssl = { version = "0.10.55", features = ["vendored"] }
include_dir = "0.7.3"
chrono = { version = "0.4.26", features = ["serde"] }
rustls = { version = "0.21.2" }
futures-util = "0.3.28"
wildmatch = "2.1.1"
http = "0.2.9"
mime_guess = "2.0.4"
tokio-rustls = "0.24.1"
hyper-rustls = { version = "0.24.0", features = ["http1", "http2"] }
log = "0.4.19"
env_logger = "0.10.0"
uluru = "3.0.0"
regex = "1.8.4"
lazy_static = "1.4.0"
lol_html = "0.3.1"
crossbeam-channel = "0.5.8"
thiserror = "1.0.37"
url = "2.3.1"
futures = "0.3.25"
dirs = "5.0.1"
async-compression = { version = "0.4.0", features = ["futures-io", "gzip"] }
reqwest = { version = "0.11.18", features = [
  "stream",
  "rustls-tls",
  "gzip",
  "deflate",
  "json",
  "brotli",
] }
once_cell = "1.18.0"
serde-tuple-vec-map = "1.0.1"
base64 = "0.21.2"
