[package]
name = "web_frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = "0.20.0"
yew-router = "0.17.0"
serde_json = "1.0.99"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "0c864ee8c2b7d2eb44add60ca7973c9f2454f899", features = [
  "dialog",
  "event",
  "tauri",
] }
num-format = "0.4.4"
serde = { version = "1.0.164", features = ["derive"] }
gloo-utils = "0.1.7"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
futures = "0.3.28"
log = "0.4.19"
wasm-logger = "0.2.0"
gloo-timers = { version = "0.2.6", features = ["futures"] }
serde-tuple-vec-map = "1.0.1"
web-sys = { version = "0.3.64", features = [
  "Document",
  "HtmlHeadElement",
  "Element",
  "NamedNodeMap",
] }
